--- a/progetto.html
+++ b/progetto.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form di Esempio</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
     <h1>Form di Esempio</h1>
@@ -35,24 +46,24 @@
         <button type="submit">Crea Spesa</button>
     </form>
 
-    <!-- Messaggi -->
-    <div id="messaggi"></div>
+    <!-- Tabella -->
+    <table id="tabella">
+        <thead>
+            <tr>
+                <th>Testa-di-cazzo</th>
+                <th>Soldi Spesi</th>
+                <th>Pezze al culo</th>
+                <!-- Colonne per "Deve a <nome-personaggio>" saranno aggiunte tramite JavaScript -->
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Righe per i personaggi saranno aggiunte tramite JavaScript -->
+        </tbody>
+    </table>
 
     <script>
         // Array per tenere traccia dei personaggi creati
         var personaggiCreati = [];
-
-        // Funzione per aggiungere un nuovo messaggio per un personaggio
-        function aggiungiMessaggio(personaggio) {
-            var messaggiDiv = document.getElementById("messaggi");
-            var nuovoMessaggio = document.createElement("p");
-            nuovoMessaggio.textContent = personaggio + ", soldi spesi: 0€"; // Inizializza il totale a 0
-            messaggiDiv.appendChild(nuovoMessaggio);
-            var deveAMessaggio = document.createElement("span");
-            deveAMessaggio.textContent = "Deve a " + personaggio + ": 0€";
-            messaggiDiv.appendChild(deveAMessaggio);
-            messaggiDiv.appendChild(document.createElement("br"));
-        }
 
         // Aggiungiamo le opzioni al menu a tendina dinamicamente quando il primo form viene inviato
         document.getElementById("form1").addEventListener("submit", function(event) {
@@ -66,8 +77,8 @@
             personaggiCreati.push(personaggio); // Aggiungi il personaggio all'array
             personaggioInput.value = ""; // Resetta il campo di input del personaggio
 
-            // Aggiungi il messaggio e "deve a <nome-personaggio>: 0€" per il nuovo personaggio
-            aggiungiMessaggio(personaggio);
+            // Aggiungi una riga per il nuovo personaggio nella tabella
+            aggiungiRigaTabella(personaggio);
 
             // Aggiungi le opzioni al menu a tendina "anticipati_a" nel secondo form
             var anticipatiASelect = document.getElementById("anticipati_a");
@@ -82,44 +93,66 @@
             });
         });
 
+        // Funzione per aggiungere una riga per un personaggio nella tabella
+        function aggiungiRigaTabella(personaggio) {
+            var tabella = document.getElementById("tabella");
+            var tbody = tabella.getElementsByTagName("tbody")[0];
+            var riga = tbody.insertRow();
+            var cellaNome = riga.insertCell();
+            var cellaSoldiSpesi = riga.insertCell();
+            var cellaPezzeAlCulo = riga.insertCell();
+            cellaNome.textContent = personaggio;
+            cellaSoldiSpesi.textContent = "0€";
+            cellaPezzeAlCulo.textContent = "0€";
+
+            // Aggiungi colonne per "Deve a <nome-personaggio>"
+            personaggiCreati.forEach(function(altroPersonaggio) {
+                var cella = riga.insertCell();
+                cella.textContent = "0€";
+            });
+        }
+
         // Gestore di eventi per il secondo form
         document.getElementById("form2").addEventListener("submit", function(event) {
             event.preventDefault(); // Previene il comportamento predefinito del form
             var personaggioSelect = document.getElementById("personaggio_select");
             var soldiSpesiInput = document.getElementById("soldi_spesi");
             var anticipatiASelect = document.getElementById("anticipati_a");
-            var messaggiDiv = document.getElementById("messaggi");
-
-            // Trova il paragrafo corrispondente al personaggio selezionato
+            var tabella = document.getElementById("tabella");
+            var tbody = tabella.getElementsByTagName("tbody")[0];
+            
+            // Trova la riga corrispondente al personaggio selezionato
             var personaggio = personaggioSelect.value;
-            var messaggi = messaggiDiv.getElementsByTagName("p");
-            var messaggio;
-            var deveAMessaggio;
-            for (var i = 0; i < messaggi.length; i++) {
-                if (messaggi[i].textContent.startsWith(personaggio)) {
-                    messaggio = messaggi[i];
-                    deveAMessaggio = messaggi[i + 1]; // Il messaggio "deve a <nome-personaggio>: 0€" segue immediatamente il messaggio del personaggio
+            var righe = tbody.getElementsByTagName("tr");
+            var riga;
+            for (var i = 0; i < righe.length; i++) {
+                if (righe[i].cells[0].textContent === personaggio) {
+                    riga = righe[i];
                     break;
                 }
             }
 
-            // Aggiorna il campo soldi spesi nel messaggio
-            if (messaggio && deveAMessaggio) {
-                var soldiSpesi = parseFloat(messaggio.textContent.split(":")[1].trim().replace("€", ""));
+            // Aggiorna il campo soldi spesi nella riga della tabella
+            if (riga) {
+                var soldiSpesi = parseFloat(riga.cells[1].textContent.replace("€", ""));
                 var nuovaSpesa = parseFloat(soldiSpesiInput.value);
                 if (!isNaN(nuovaSpesa)) { // Controllo se la nuova spesa è un numero valido
                     var totaleSpeso = soldiSpesi + nuovaSpesa;
-                    messaggio.textContent = personaggio + ", soldi spesi: " + totaleSpeso.toFixed(2) + "€";
+                    riga.cells[1].textContent = totaleSpeso.toFixed(2) + "€";
                     soldiSpesiInput.value = ""; // Resetta il campo di input dei soldi spesi
-                    deveAMessaggio.textContent = "Deve a " + personaggio + ": " + totaleSpeso.toFixed(2) + "€";
+                    // Aggiorna la colonna "Deve a <nome-personaggio>" per il personaggio selezionato
+                    var colonneDeveA = riga.cells.length - 3; // L'indice di "Deve a <nome-personaggio>" è l'ultimo meno 2 (considerando la colonna "Testa-di-cazzo" e "Soldi Spesi")
+                    for (var j = 0; j < colonneDeveA; j++) {
+                        var deveA = riga.cells[j + 3]; // Il primo indice della colonna "Deve a <nome-personaggio>" è 3
+                        deveA.textContent = totaleSpeso.toFixed(2) + "€";
+                    }
                 }
             }
         });
 
-        // Aggiungere "deve a <nome-personaggio>: 0€" per tutti i personaggi creati
-        var messaggiDiv = document.getElementById("messaggi");
+        // Aggiungere una riga per ogni personaggio creato nella tabella
         personaggiCreati.forEach(function(personaggio) {
-            aggiungiMessaggio(personaggio);
+            aggiungiRigaTabella(personaggio);
         });
     </script>
 </body>
